--- a/pages/park-car.html
+++ b/pages/park-car.html
@@ -37,7 +37,8 @@
         <form id="carForm">
             <a href="/" class="back-button" dir="rtl">חזרה</a>
             <label dir="rtl" for="carID">מספר רכב</label>
-            <input dir="rtl" id="carID" name="carID" class="carID" type="tel" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+            <input dir="rtl" id="carID" name="carID" class="carID" type="text" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+                inputmode="numeric" required>
             <span dir="rtl" id="carIDError" class="error">מספר רכב לא תקין, מצופה מספר בפורמט 123-45-678 או
                 12345678.</span>
             <label dir="rtl" for="km">קמ נוכחי</label>
