--- a/pages/park-car.html
+++ b/pages/park-car.html
@@ -97,8 +97,8 @@
             justify-content: center;
             align-items: center;
             position: absolute;
-            left: 10px;
-            top: 15px;
+            left: 8px;
+            top: 10px;
             border-radius: 50%;
             width: 25px;
             height: 25px;
@@ -139,9 +139,10 @@
                     <path id="Line_9" data-name="Line 9"
                         d="M48.91,15l-0.12,0A1,1,0,0,0,48,16v6a1,1,0,1,0,2,0s0,0,0,0V16a1,1,0,0,0-1-1H48.91Z" />
                 </svg>
-                <svg id="mic" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                <svg id="mic" xmlns="http://www.w3.org/2000/svg" height="25" width="18.75" viewBox="0 0 384 512">
                     <path
-                        d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z" />
+                        d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z">
+                    </path>
                 </svg>
             </div>
             <a href="/" class="back-button" dir="rtl">חזרה</a>
