disable voice input if no input was detected for 5 seconds

--- a/pages/park-car.html
+++ b/pages/park-car.html
@@ -253,6 +253,7 @@
                 }
             });
             sr.start();
+            t = setTimeout(stop, 5000, 'No sound recognized in the 5 initial seconds');
         });
 
         const audioButton = $('audioButton');
