use `link rel="prefetch" />`

--- a/pages/index.html
+++ b/pages/index.html
@@ -122,4 +122,9 @@
     </div>
 </body>
 
+<link rel="prefetch" href="/park-car" />
+<link rel="prerender" href="/park-car" />
+<link rel="prefetch" href="/replace-client-car" />
+<link rel="prerender" href="/replace-client-car" />
+
 </html>
