--- a/pages/login.html
+++ b/pages/login.html
@@ -150,7 +150,7 @@
     </div>
 
     <script type="module">
-        import { fetchAndQr, alertSoon } from './fetch-and-qr.ts';
+        import { fetchAndQr, alertSoon } from './fetch-and-qr.js';
         // onSuccess - redirect to /
 
         document.getElementById('loginForm').addEventListener('submit', async (event) => {
