--- a/pages/park-car.html
+++ b/pages/park-car.html
@@ -165,7 +165,7 @@
     </div>
 
     <script type="module">
-        import { fetchAndQr, alertSoon } from './fetch-and-qr.ts';
+        import { fetchAndQr, alertSoon } from './fetch-and-qr.js';
 
         const $ = document.getElementById.bind(document);
 
@@ -214,51 +214,12 @@
             });
         });
 
-        let { SpeechRecognition } = globalThis;
-        if (!SpeechRecognition)
-            SpeechRecognition = webkitSpeechRecognition;
-
-        const listen = (options = void 0) => new Promise((resolve, reject) => {
-            let t = 0, ended = false;
-            const stop = event => {
-                if (event) reject(event);
-                clearTimeout(t);
-                ended = true;
-                sr.stop();
-            };
-            const result = ({ results }) => {
-                stop();
-                for (let i = results.length - 1; i >= 0; i--) {
-                    const result = results[i];
-                    if (result.isFinal) {
-                        for (const { transcript } of result) {
-                            resolve(transcript);
-                            return;
-                        }
-                    }
-                }
-            };
-            const sr = Object.assign(new SpeechRecognition, options, { interimResults: true, continuous: true });
-            sr.addEventListener('error', stop, { once: true });
-            sr.addEventListener('nomatch', stop, { once: true });
-            sr.addEventListener('audioend', () => stop(), { once: true });
-            sr.addEventListener('result', event => {
-                if (ended) {
-                    result(event);
-                    clearTimeout(t);
-                }
-                else {
-                    clearTimeout(t);
-                    t = setTimeout(result, 2000, event);
-                }
-            });
-            sr.start();
-            t = setTimeout(stop, 2500, 'No sound recognized in the 2.5 initial seconds');
-        });
 
         const audioButton = $('audioButton');
 
         audioButton.addEventListener('click', async () => {
+            const { listen } = await import('./vad.js');
+
             const wave = $('wave');
             const mic = $('mic');
             mic.style.display = 'none';
@@ -266,10 +227,8 @@
 
             // avoid clicks while listenings
             audioButton.disabled = true;
-            listen({
-                lang: 'he-IL'
-            }).then(transcript => {
-                console.log(transcript); // DELETE
+            listen().then(data => {
+                console.log(data); // DELETE
                 output(transcript);
             }).catch(console.error).finally(() => {
                 audioButton.disabled = false;
@@ -278,26 +237,14 @@
             });
         });
 
-        async function transform(text) {
-            const response = await fetch(`/speech`, {
-                method: 'POST',
-                body: text
-            });
-            return await response.json();
-        }
-
         function output(input) {
-            transform(input).then(data => {
-                console.log(data); // DELETE
-                for (const key of Object.keys(data)) {
-                    const element = $(key);
-                    if (element) {
-                        element.value = data[key];
-                    }
+            for (const key of Object.keys(data)) {
+                const element = $(key);
+                if (element) {
+                    element.value = data[key];
                 }
-            });
-        }
-
+            }
+        };
     </script>
 
 </body>
