--- a/pages/replace-client-car.html
+++ b/pages/replace-client-car.html
@@ -54,7 +54,7 @@
     </div>
 
     <script type="module">
-        import { fetchAndQr, alertSoon } from './fetch-and-qr.ts';
+        import { fetchAndQr, alertSoon } from './fetch-and-qr.js';
 
         const $ = document.getElementById.bind(document);
         $('carForm').addEventListener('submit', async (event) => {
