--- a/pages/404/basic.html
+++ b/pages/404/basic.html
@@ -4,6 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="theme-color" content="#007BFF">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/opl-192x192.jpg">
+    <link rel="apple-touch-icon" sizes="192x192" href="/opl-192x192.jpg">
+    <link rel="shortcut icon" type="image/jpeg" sizes="192x192" href="/opl-192x192.jpg">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+
     <meta name="theme-color" content="#f3f4f6">
 
     <title>404 Not Found</title>
