fix missing integrity

--- a/pages/speech.html
+++ b/pages/speech.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buddy-Bot</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <style>
         * {
             box-sizing: border-box;
@@ -337,7 +338,7 @@
             sr.addEventListener('nomatch', stop, { once: true });
             sr.addEventListener('audioend', () => stop(), { once: true });
             sr.addEventListener('result', event => {
-                if (ended){
+                if (ended) {
                     result(event);
                     clearTimeout(t);
                 }
