--- a/pages/404/bsd.html
+++ b/pages/404/bsd.html
@@ -106,7 +106,7 @@
 <body>
     <main class="bsod container">
         <h1 class="neg title"><span class="bg">Error - 404</span></h1>
-        <p>An error has occured, to continue:</p>
+        <p>An error has occurred, to continue:</p>
         <p>* Return to our homepage.<br />
             * Send us an e-mail about this error and try later.</p>
         <nav class="nav">
