--- a/pages/speech.html
+++ b/pages/speech.html
@@ -63,7 +63,7 @@
             padding: 15px;
             /* margin-left: auto; */
             border-radius: 10px;
-            padding: auto;
+            /* padding: auto; */
             width: fit-content
         }
 
@@ -99,7 +99,6 @@
             border: solid 1px rgb(0, 0, 14, 0);
             margin-top: 1px;
             margin-left: -45px;
-            padding: 10px;
         }
 
         #button:hover {
