[Sonarcloud] Unexpected missing generic font family

--- a/pages/404/hypnotic.html
+++ b/pages/404/hypnotic.html
@@ -34,7 +34,7 @@
         }
 
         svg {
-            font: 10.5em 'Monoton';
+            font: 10.5em 'Monoton', sans-serif, cursive;
             width: 100%;
             height: 80lvh;
         }
