--- a/pages/404/neon.html
+++ b/pages/404/neon.html
@@ -55,7 +55,7 @@
             display: block;
             color: #12000a;
             font-weight: 300;
-            font-family: Audiowide;
+            font-family: Audiowide, sans-serif, cursive;
             text-shadow: 0px 0px 4px #12000a;
             animation: fadeInText 3s ease-in 3.5s forwards, flicker4 5s linear 7.5s infinite, hueRotate 6s ease-in-out 3s infinite;
         }
