--- a/pages/park-car.html
+++ b/pages/park-car.html
@@ -165,7 +165,7 @@
     </div>
 
     <script type="module">
-        import { fetchAndQr, alertSoon } from './fetch-and-qr.ts';
+        import { fetchAndQr, alertSoon } from './fetch-and-qr.js';
 
         const $ = document.getElementById.bind(document);
 
