add PWA manifest and 512x512 icons

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,9 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/opl-192x192.jpg">
     <link rel="apple-touch-icon" sizes="192x192" href="/opl-192x192.jpg">
     <link rel="shortcut icon" type="image/jpeg" sizes="192x192" href="/opl-192x192.jpg">
+    <link rel="icon" type="image/png" sizes="512x512" href="/opl-512x512.jpg">
+    <link rel="apple-touch-icon" sizes="512x512" href="/opl-512x512.jpg">
+    <link rel="shortcut icon" type="image/jpeg" sizes="512x512" href="/opl-512x512.jpg">
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
     <title>אופרייט דיווחים</title>
@@ -22,6 +25,8 @@
     <meta property="og:description" content="שליחת דיווחים באמצעות האתר במקום בוואצאפ" />
     <meta property="og:url" content="https://operate.onrender.com/" />
     <meta property="og:image" content="https://operate.onrender.com/opl-960x960.jpg">
+
+    <link rel="manifest" href="/manifest.json" />
 
     <style>
         html,
