--- a/pages/park-car.html
+++ b/pages/park-car.html
@@ -15,7 +15,12 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/opl-192x192.jpg">
     <link rel="apple-touch-icon" sizes="192x192" href="/opl-192x192.jpg">
     <link rel="shortcut icon" type="image/jpeg" sizes="192x192" href="/opl-192x192.jpg">
+    <link rel="icon" type="image/png" sizes="512x512" href="/opl-512x512.jpg">
+    <link rel="apple-touch-icon" sizes="512x512" href="/opl-512x512.jpg">
+    <link rel="shortcut icon" type="image/jpeg" sizes="512x512" href="/opl-512x512.jpg">
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
+
+    <link rel="manifest" href="/manifest.json" />
 
     <title dir="rtl">דיווח חנייה</title>
 
