--- a/pages/replace-client-car.html
+++ b/pages/replace-client-car.html
@@ -15,9 +15,14 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/opl-192x192.jpg">
     <link rel="apple-touch-icon" sizes="192x192" href="/opl-192x192.jpg">
     <link rel="shortcut icon" type="image/jpeg" sizes="192x192" href="/opl-192x192.jpg">
+    <link rel="icon" type="image/png" sizes="512x512" href="/opl-512x512.jpg">
+    <link rel="apple-touch-icon" sizes="512x512" href="/opl-512x512.jpg">
+    <link rel="shortcut icon" type="image/jpeg" sizes="512x512" href="/opl-512x512.jpg">
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
 
     <title dir="rtl">מסירת רכב חליפי</title>
+
+    <link rel="manifest" href="/manifest.json" />
 
     <style>
         body {
