change site url to operate.karearl

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,8 +20,8 @@
 
     <meta property="og:title" content="אופרייט דיווחים" />
     <meta property="og:description" content="שליחת דיווחים באמצעות האתר במקום בוואצאפ" />
-    <meta property="og:url" content="https://operate.onrender.com/" />
-    <meta property="og:image" content="https://operate.onrender.com/opl-960x960.jpg">
+    <meta property="og:url" content="https://operate.karearl.com/" />
+    <meta property="og:image" content="https://operate.karearl.com/opl-960x960.jpg">
 
     <style>
         html,
