--- a/pages/login.html
+++ b/pages/login.html
@@ -20,8 +20,8 @@
 
     <meta property="og:title" content="אופרייט דיווחים" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://operate.onrender.com/login" />
-    <meta property="og:image" content="https://operate.onrender.com/opl-960x960.jpg">
+    <meta property="og:url" content="https://operate.karearl.com/login" />
+    <meta property="og:image" content="https://operate.karearl.com/opl-960x960.jpg">
 
     <style>
         html,
